syntax = "proto3";

package echo;

// 添加部分
import "google/api/annotations.proto";

option go_package = ".;proto";

// EchoRequest is the request for echo.
message EchoRequest {
    string message = 1;
}

// EchoResponse is the response for echo.
message EchoResponse {
    string message = 1;
}

// Echo is the echo service.
service Echo {
    // UnaryEcho is unary echo.
    rpc UnaryEcho (EchoRequest) returns (EchoResponse) {
        option (google.api.http) = {
            post: "/v1/example/echo"
            body: "*"
        };
    }
    // ServerStreamingEcho is server side streaming.
    rpc ServerStreamingEcho (EchoRequest) returns (stream EchoResponse) {
    }
    // ClientStreamingEcho is client side streaming.
    rpc ClientStreamingEcho (stream EchoRequest) returns (EchoResponse) {
    }
    // BidirectionalStreamingEcho is bidi streaming.
    rpc BidirectionalStreamingEcho (stream EchoRequest) returns (stream EchoResponse) {
    }
}


